@@ -3,7 +3,6 @@ package app.monitor.alert;
 import app.monitor.AlertConfig;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author neo
@@ -12,7 +11,7 @@ public class Matchers {
     public final List<Matcher> matchers;
 
     public Matchers(List<AlertConfig.Matcher> matchers) {
-        this.matchers = matchers.stream().map(Matcher::new).collect(Collectors.toList());
+        this.matchers = matchers.stream().map(Matcher::new).toList();
     }
 
     boolean match(Alert alert) {
